# backend.ai

./: .gitignore  BACKEND_AI_CONTAINER_IMAGES.md  BUILD  Dockerfile.agent  Dockerfile.app-proxy-coordinator  Dockerfile.app-proxy-worker  Dockerfile.manager  Dockerfile.storage-proxy  Dockerfile.web-server  KUBERNETES_DEPLOYMENT_GUIDE.kr  KUBERNETES_DEPLOYMENT_GUIDE.md  KUBERNETES_DEPLOYMENT_STATUS.md  KUBEVIRT_GPU_GUIDE.md  LOGGING_GUIDE.md  README-SCRIPTS.md  README-k8s.md  README.rst  VLLM_DEPLOYMENT_GUIDE.md  add-manager-values.yaml  backend-ai-gpu-vm.yaml  deploy-backend-ai.sh  deploy-kubevirt-gpu.sh  deploy-vllm-model.sh  full-infrastructure-values.yaml  harbor-values.yaml  kubevirt-gpu-setup.yaml  kubevirt-network-config.yaml  manage-backend-ai.sh  manager-configmap-fix.yaml  manager-deployment-values.yaml  manager-enabled-values.yaml  manager-fix-configmap.yaml  minimal-test-values.yaml  pants.toml  simple-test-values.yaml  stop-backend-ai.sh  test-values.yaml  update-registry.sh  updated-backend-ai-values.yaml  vllm-examples.sh  (+1 more)
backend-ai-agent-helm/: Chart.yaml  values.yaml  values.yaml.bak
backend-ai-app-proxy-helm/: Chart.yaml  values.yaml  values.yaml.bak
backend-ai-gpu-agent-helm/: Chart.yaml  values.yaml
backend-ai-manager-helm/: Chart.yaml  DEPLOYMENT_GUIDE.md  README.md  values.yaml  values.yaml.bak
backend-ai-storage-proxy-helm/: Chart.yaml  values.yaml  (+1 more)
health-checker/: .gitignore  Cargo.toml  Makefile  README.md
health-checker/examples/: gpu_monitoring.sh
health-checker/src/: checks.rs  docker.rs  gpu.rs  main.rs  services.rs
(+100 files in other folders)
